# arwen

./: .clangd  .gitignore  CMakeLists.txt  README.md  compile_commands.json  config.h.in  func.arw  test.arw
doc/: IR.md
etc/: gen_constants.cpp  syscalls.master
rt/: CMakeLists.txt  arwen.h  dynarr.c  lia.h  puts.c  utf8.c
rt/arch/Darwin/arm64/: puti.s  puts.s  start.s  strlen.s  write.s
rt/arch/Linux/x86_64/: trampoline.s
share/: std.arw  std.lia
src/: Error.cpp  Error.h  FileBuffer.cpp  FileBuffer.h  Foreign.cpp  Lib.h  Logging.cpp  Logging.h  Options.cpp  Options.h  Resolve.cpp  Resolve.h  Result.h  ScopeGuard.h  Set.h  SimpleFormat.h  TaggedUnion.h  Unescape.cpp  Unescape.h  Value.h  arwen.grammar  builtin.arw  main.cpp
src/AST/: AST.h  Arwen.cpp  Operator.h
src/App/: Bind.cpp  BoundNode.cpp  BoundNode.h  Coerce.cpp  Config.cpp  Config.h  Debugger.cpp  Dump.cpp  Keyword.cpp  Keyword.h  Main.cpp  Namespace.cpp  Normalize.cpp  Operator.cpp  Operator.h  Parser.cpp  Parser.h  Resolve.cpp  Stamp.cpp  SyntaxNode.cpp  SyntaxNode.h  Type.cpp  Type.h  Value.cpp  Value.h  arwen.cpp
src/App/IR/: Generate.cpp  IR.cpp  IR.h
src/App/QBE/: Execute.cpp  IL.cpp  Native.cpp  Native.h  QBE.cpp  QBE.h
src/App/Syntax/: BinaryExpression.cpp  Block.cpp  Branch.cpp  Constant.cpp  Embed.cpp  Enum.cpp  Expression.cpp  FlowControl.cpp  Function.cpp  Import.cpp  Include.cpp  Insert.cpp  Loop.cpp  Module.cpp  Namespace.cpp  Number.cpp  Number.h  Program.cpp  Public.cpp  Return.cpp  String.cpp  Struct.cpp  Type.cpp  Variable.cpp
src/Arch/: AssemblyWriter.cpp  AssemblyWriter.h
src/Arch/Arm64/: Arm64.cpp  Arm64.h  GenOp.cpp
src/Arch/Linux/x86_64/: GenOp.cpp  X86_64.cpp  X86_64.h
src/Binder/: ArrayType.h  BinaryExpression.h  Binder.cpp  Binder.h  Break.h  Constant.h  ConstantDeclaration.h  Continue.h  For.h  FunctionCall.h  Identifier.h  Range.h  SliceType.h  Type.cpp  Type.h
src/Grammar/: Grammar.cpp  Grammar.h  Parser.h  Rule.cpp  Sequence.cpp  Symbol.cpp
src/GrammarParser/: GrammarParser.cpp  GrammarParser.h
src/IR/: Execute.cpp  Execute.h  Execute.inc  ExecuteImpl.h  Foreign.h  IR.cpp  IR.h  Intrinsics.cpp  Intrinsics.h  Machine.cpp  Scope.cpp
src/Interp/: Execute.cpp  Interpreter.cpp  Interpreter.h  Native.cpp  Native.h  Scope.cpp  Stack.cpp  Stack.h  Value.cpp  ValueStack.cpp
src/Lexer/: Config.cpp  Lexer.cpp  Lexer.h  Token.cpp  TokenKind.cpp
src/Type/: Type.cpp  Type.h  Value.cpp  Value.h
src/Util/: Align.h  Arena.cpp  Arena.h  Checked.h  Defer.h  Error.cpp  Error.h  FileBuffer.cpp  FileBuffer.h  IO.cpp  IO.h  Integer.cpp  Integer.h  JSON.cpp  JSON.h  Lexer.h  Logging.cpp  Logging.h  Options.cpp  Options.h  Pipe.cpp  Pipe.h  Process.cpp  Process.h  Ptr.h  Resolve.cpp  Resolve.h  Result.h  StringBuffer.cpp  StringBuffer.h  StringScanner.h  StringUtil.cpp  StringUtil.h  Token.cpp  Token.h  TokenLocation.h  Utf8.cpp  Utf8.h
test/: .gitignore  01_helloworld.arw  01_helloworld.c  01_helloworld.json  01_helloworld.lia  02_expression.arw  02_expression.json  03_comptime.arw  03_comptime.json  04_variable.arw  04_variable.json  05_reassign.arw  05_reassign.json  06_add_variables.arw  06_add_variables.json  07_while.arw  07_while.json  08_modulo.json  08_modulo.lia  09_overload.arw  09_overload.json  10_func.arw  10_func.json  11_if_else.arw  11_if_else.json  12_cstring.arw  12_cstring.json  13_bool_unary.arw  13_bool_unary.json  14_struct.arw  14_struct.json  15_braced_initializer.json  15_braced_initializer.lia  16_optional.lia  alloc.arw  array.arw  cat.arw  constant_folding.arw  embed.arw  expr.arw  (+24 more)
